2017-10-03  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222786. rdar://problem/34706688

    2017-10-03  Brent Fulgham  <bfulgham@apple.com>

            Unreviewed test fix after r222779.

            * testing/cocoa/WebArchiveDumpSupport.mm:
            (WebCoreTestSupport::createCFURLResponseFromResponseData): Setting NSSecureCoding in this test code should be
            done based on build system, just like it is in the actual WebArchive handling code.

2017-10-03  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222779. rdar://problem/34706688

    2017-10-03  Brent Fulgham  <bfulgham@apple.com>

            [Mac] Use safer decoding practices for NSKeyedUnarchiver
            https://bugs.webkit.org/show_bug.cgi?id=175887
            <rdar://problem/33435281>

            Reviewed by Daniel Bates.

            * loader/archive/cf/LegacyWebArchiveMac.mm:
            (WebCore::LegacyWebArchive::createResourceResponseFromMacArchivedData): Use NSSecureCoding to unarchive.
            (WebCore::LegacyWebArchive::createPropertyListRepresentation): Ditto for archiving.
            * testing/cocoa/WebArchiveDumpSupport.mm:
            (WebCoreTestSupport::createCFURLResponseFromResponseData): Update to use NSSecureCoding if possible.

2017-10-01  Jason Marcell  <jmarcell@apple.com>

        Cherry-pick r222588. rdar://problem/34717517

    2017-09-27  Myles C. Maxfield  <mmaxfield@apple.com>

            Minimum font size may cause elements to have an infinite line-height
            https://bugs.webkit.org/show_bug.cgi?id=177573
            <rdar://problem/34573792>

            Reviewed by Dan Bernstein.

            When minimum font size is specified, we were trying to preserve the ratio of specified font-size
            and specified line-height in order to boost the computed font size proportionately to the font-size
            boost. However, this doesn't work when the specified font-size is 0, because the ratio between